other-vpol/allowed-image-repos/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: pod-01
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: pod-01
      image: myknownimage
    - name: pod-02
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  initContainers:
    - name: pod-01-init
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: pod-02-init
      image: myknownimage
  containers:
    - name: pod-01
      image: myknownimage
    - name: pod-02
      image: kyverno
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  initContainers:
    - name: pod-01-init
      image: myknownimage
    - name: pod-02-init
      image: myknownimage
  containers:
    - name: pod-01
      image: myknownimage
    - name: pod-02
      image: docker.io/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: pod-01
      image: myknownimage
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - name: pod-01
      image: ghcr.io/images/myknownimage:1.26
    - name: pod-02
      image: ghcr.io/kyverno/kyverno:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  initContainers:
    - name: pod-01-init
      image: kyverno:latest
    - name: pod-02-init
      image: myknownimage
  containers:
    - name: pod-01
      image: myknownimage:1.14
    - name: pod-02
      image: kyverno
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: bb-01-init
        image: ghcr.io/kyverno/test-busybox:1.35
      containers:
      - name: bb-01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: bb01-init
        image: ghcr.io/kyverno/test-busybox:1.35
      containers:
      - name: bb-01
        image: myknownimage
      - name: bb-02
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: bb-01-init
            image: kyverno
          containers:
            - name: bb-01
              image: ghcr.io/kyverno/test-busybox:1.35
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: bb01-init
            image: ghcr.io/kyverno/test-busybox:1.35
          containers:
          - name: bb-01
            image: kyverno
          - name: bb-02
            image: myknownimage
          restartPolicy: OnFailure
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: bb-01-init
        image: myknownimage
      containers:
      - name: bb-01
        image: kyverno
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: bb01-init
        image: kyverno
      containers:
      - name: bb-01
        image: myknownimage
      - name: bb-02
        image: kyverno
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: bb-01-init
            image: myknownimage
          containers:
            - name: bb-01
              image: kyverno
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: bb01-init
            image: kyverno
          containers:
          - name: bb-01
            image: myknownimage
          - name: bb-02
            image: kyverno
          restartPolicy: OnFailure
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-untagged
spec:
  containers:
  - image: kyverno
    name: app
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-tagged
spec:
  containers:
  - image: kyverno:latest
    name: app
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-digest
spec:
  containers:
  - image: kyverno@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: app
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-tag-digest
spec:
  containers:
  - image: kyverno:latest@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: app
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-registry-tagged
spec:
  containers:
  - image: ghcr.io/kyverno/kyverno:latest
    name: app
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-registry-digest
spec:
  containers:
  - image: ghcr.io/kyverno/kyverno@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: app
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-port-digest
spec:
  containers:
  - image: registry.example.com:5000/team/kyverno@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: app
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-myknownimage-digest
spec:
  containers:
  - image: ghcr.io/images/myknownimage@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: app
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-digest
spec:
  containers:
  - image: ghcr.io/example/notallowed@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: app
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-init-digest
spec:
  containers:
  - image: kyverno
    name: app
  initContainers:
  - image: ghcr.io/example/kyverno@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: extra
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-init-digest
spec:
  containers:
  - image: kyverno
    name: app
  initContainers:
  - image: ghcr.io/example/notallowed@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: extra
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-ephemeral-digest
spec:
  containers:
  - image: kyverno
    name: app
  ephemeralContainers:
  - image: ghcr.io/example/kyverno@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: extra
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-ephemeral-digest
spec:
  containers:
  - image: kyverno
    name: app
  ephemeralContainers:
  - image: ghcr.io/example/notallowed@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: extra
